[package]
name = "linked-data"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"
licence = "MIT OR Apache-2.0"

[dependencies]
either = {version = "1.6", features = ["serde"]}
cid = "0.7"
libsecp256k1 = { version = "0.5", default-features = false, features = ["static-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = "2.0"
