[package]
name = "linked-data"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

[dependencies]
either = { version = "1.6", default-features = false, features = ["serde"] }
cid = { version = "0.7", default-features = false, features = ["std"] }
libsecp256k1 = { version = "0.6", default-features = false, features = ["lazy-static-context"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [] }
serde_with = { version = "1.10", default-features = false, features = ["macros"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
