[package]
name = "streamer-app"
version = "1.0.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"
licence = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["signal", "macros", "process", "rt-threaded", "sync", "stream"] }
ipfs-api = "0.9"
cid = "0.6"
multibase = "0.9"
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
m3u8-rs = "1.0"