[package]
name = "streamer-app"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"
licence = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "0.2", features = ["fs", "signal", "macros", "process", "rt-threaded", "sync", "stream"] }
ipfs-api = "0.9.0"
cid = "0.6"
multibase = "0.9"
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
m3u8-rs = "1.0"
linked-data = { path = "../linked-data" }