[package]
name = "streamer-app"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"
licence = "MIT OR Apache-2.0"

[dependencies]
cid = "0.6"
futures-util = { version = "0.3" }
hyper = { version = "0.14", features = ["http1", "server", "runtime", "stream"] }
ipfs-api = { git = "https://github.com/sionois/rust-ipfs-api", branch = "pubsub-reqwest", features = ["with-reqwest"] }
linked-data = { path = "../linked-data" }
m3u8-rs = "1.0"
multibase = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["signal", "macros", "process", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tokio-util = "0.6"