[package]
name = "viewer-app"
version = "1.0.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["signal", "macros", "rt-threaded", "stream", "sync"] }
ipfs-api = { git = "https://github.com/SionoiS/rust-ipfs-api", branch = "dag" }
hyper = "*"
cid = "*"
multibase = "*"
m3u8-rs = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"