[package]
name = "web-app"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

[dependencies]
blockies = "0.3"
cid = "0.7"
either = {version = "1.6", features = ["serde"]}
futures = "0.3"
futures-util = { version = "0.3", features = ["io"] }
js-sys = "0.3"
linked-data = { path = "../linked-data" }
pulldown-cmark = "0.8.0"
reqwest = { git = "http://github.com/SionoiS/reqwest", branch = "better_wasm", default-features = false, features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web3 = { git = "http://github.com/SionoiS/rust-web3", branch = "ens", default-features = false, features = ["eip-1193"] }
web-sys = { version = "0.3", features = [
    "MediaSource",
    "MediaSourceReadyState",
    "SourceBuffer",
    "SourceBufferAppendMode",
    "Url",
    "HtmlMediaElement",
    "MediaError",
    "TimeRanges",
    "Performance",
    "Storage",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "NodeList",
]}
ybc = "0.2"
yew = "0.18"
yew-router = "0.15"
yewtil = "0.4"