[package]
name = "web-app"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

[dependencies]
blockies = "0.3"
chrono ={ version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
cid = { version = "0.7", default-features = false, features = [] }
either = { version = "1.6", default-features = false, features = [] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
linked-data = { path = "../linked-data" }
pulldown-cmark = "0.8"
reqwest = { git = "http://github.com/SionoiS/reqwest", branch = "better_wasm", default-features = false, features = ["json", "multipart", "stream"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [] }
wasm-bindgen = { version = "0.2.78", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", default-features = false, features = [] }
web3 = { git = "http://github.com/SionoiS/rust-web3", branch = "ens", default-features = false, features = ["wasm", "eip-1193"] }
web-sys = { version = "0.3.55", default-features = false, features = [
    "MediaSource",
    "MediaSourceReadyState",
    "SourceBuffer",
    "SourceBufferAppendMode",
    "Url",
    "HtmlMediaElement",
    "MediaError",
    "TimeRanges",
    "Performance",
    "Storage",
]}
ybc = { version = "0.2", default-features = false, features = ["router"] }
yew = { version = "0.18", default-features = false, features = ["web_sys"] }
yew-router = { version = "0.15", default-features = false, features = [] }